2003-05-17  David N. Welton  <davidw@dedasys.com>

	* irc_example.tcl: Changes from Aaron Faupell - now uses irc 0.4.
	  Use ircclient namespace instead of previous, overly generic
	  'client'.

2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.4 ========================
	* 

2003-01-30  David N. Welton  <davidw@dedasys.com>

	* irc_example.tcl (client::connect): Added some more comments,
	  change the startup features.  Create ChangeLog.
